# engine-sim-cli

./: .axxtermcolors  .claude-summary-instructions.md  .gitignore  .gitmodules  AUDIO_CRACKLING_FIX_REPORT.md  AUDIO_THEORIES_TRACKING.md  BRIDGE_ARCHITECTURE_REVIEW.md  BUFFER_MANAGEMENT_ANALYSIS.md  BUG_FIX_PROGRESS_SUMMARY.md  Brewfile  CMakeLists.txt  COMPREHENSIVE_FAILURE_ANALYSIS.md  COMPREHENSIVE_FIX_PLAN.md  CRACKLE_FIX_SUMMARY.md  CROSS_CHECK_SUMMARY.md  DOCUMENTATION_MASTER_INDEX.md  DOCUMENTATION_SUMMARY.md  DOCUMENTATION_TREE.txt  FINAL_TEST_REPORT.md  FIXES_SUMMARY.md  FORK_ANALYSIS.md  INITIALIZATION_UNDERRUN_INVESTIGATION.md  INIT_SEQUENCE_INVESTIGATION.md  MACOS_AUDIO_API_RESEARCH.md  Makefile  OPTIMIZATION_PROPOSAL.md  README.md  README_DOCUMENTATION.md  SOLID_PEDANT_SRP_FIX_VALIDATION.md  SRP_FIX_DOCUMENTATION.md  SYNC_PULL_PLAN.md  TEST1_AUDIO_THREAD_WAKEUP_ANALYSIS.md  TESTING_GUIDE.md  TEST_INVESTIGATION_LOG.md  TODO_UI.md  UNDERFLOW_AND_SRP_INVESTIGATION.md  UNDERFLOW_FIX_DOCUMENTATION.md  V8_ENGINE_GUIDE.md  all4_cli_tests.sh  assets  (+26 more)
.github/: ARCH-001-phase6-iaudiostrategy-consolidation.md  ARCH-002-itelemetryprovider-interface.md  ARCH-003-phase4-iaudioplatform-extraction.md  ARCH-004-strategy-interface-unification.md  ARCH-005-ios-app.md  ARCH-005-seven-phase-refactor-to-holy-trinity.md
archive/: ADDITIONAL_FINDINGS.md  AUDIO_COMPARISON_TABLE.md  AUDIO_EVIDENCE.md  AUDIO_FIX_SUMMARY.md  AUDIO_INVESTIGATION_REPORT.md  AUDIO_PATTERN_ANALYSIS.md  CLI_10PCT_DROPOUT_ROOT_CAUSE.md  CLI_GUI_COMPARISON.md  COMPLETE_COMPARISON.md  CONCURRENCY_ANALYSIS.md  DEFINITIVE_FIX_PLAN.md  DROPOUT_DIAGNOSIS.md  DROPOUT_ROOT_CAUSE.md  ENGINE_STARTUP_FIX.md  ENGINE_STARTUP_INVESTIGATION.md  GUI_AUDIO_TIMING_ANALYSIS.md  GUI_COPY_REPORT.md  GUI_REPLICATION_PLAN.md  HANDOFF.md  HANDOVER_AUDIO_DROPOUT_INVESTIGATION.md  IMPLEMENTATION_VERIFICATION.md  PHYSICS_ANALYSIS.md  SOLUTION_ARCHITECT_REPORT.md  STARTER_SOUND_TUNING_GUIDE.md  TA1_FINDINGS.md  TA2_FINDINGS.md  TA3_FINDINGS.md  THROTTLE_ANALYSIS.md  THROTTLE_FIX_PROPOSAL.md  THROTTLE_INVESTIGATION.md
build-tui/: CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_test_discovery_11e55285c6.json  engine-sim-tui-tests[1]_include.cmake  engine-sim-tui-tests[1]_tests.cmake
docs/: ANALYSIS_CORRECTIONS.md  ARCHITECTURE_AUDIT.md  ARCHITECTURE_AUDIT_REPORT.md  ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_FILE_CLASS_AUDIT.md  ARCHITECTURE_TODO.md  AUDIO_BRIDGE_API.md  AUDIO_MODULE_ANALYSIS.md  AUDIO_MODULE_ARCHITECTURE.md  AUDIO_REGRESSION_FIX.md  AUDIT_DOCUMENTATION_SUMMARY.md  BASELINE_MANAGEMENT_ANALYSIS.md  BEFORE_AFTER_COMPARISON.md  BRIDGE_ARCHITECTURE_REVIEW.md  BRIDGE_INTEGRATION_ARCHITECTURE.md  BUFFER_STARVATION_ANALYSIS.md  CLASS_HIERARCHY.md  CLEANUP_COMPLETE_2026-02-17.md  CLI_THINNING_PLAN.md  CODE_METRICS.md  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_FIX_PLAN.md  DEAD_CODE_CLEANUP_SUMMARY.md  DEBUGGING_HISTORY.md  DETERMINISM_FAILURE_FIX_PLAN.md  DETERMINISM_FIX_SUMMARY.md  DETERMINISTIC_AUDIO_TESTS.md  DIAGNOSTICS_GUIDE.md  DOCUMENTATION_PROCESS_LESSONS_LEARNED.md  DRY_REFACTORING_COMPLETE.md  DRY_REFACTORING_PLAN.md  ENGINE_SEGFAULT_AND_SINE_LAG_FIXES.md  FIX_PRESET_ENGINE_TESTS.md  INTEGRATION_PLAN.md  OPTION_B_PROGRESS_SUMMARY.md  PERFORMANCE_FINDINGS.md  PHASE6_BROKEN_STATUS.md  PHASE6_STRATEGY_CONSOLIDATION_ANALYSIS.md  PLATFORM_AUDIO_RESEARCH.md  PRESET_ENGINE_ISOMORPHIC_SCRIPT.md  (+19 more)
engine-sim-esp32/: CMakeLists.txt  sdkconfig  (+1 more)
engine-sim-esp32/main/: CMakeLists.txt  esp32_main.cpp  main.cpp
engine-sim-tui/: CMakeLists.txt
engine-sim-tui/include/engine_sim_tui/canvas/: ColorPalette.h
engine-sim-tui/include/engine_sim_tui/data/: IEngineDataProvider.h  MockEngineDataProvider.h
engine-sim-tui/include/engine_sim_tui/viewmodels/: EngineViewModel.h  GaugeViewModel.h
engine-sim-tui/include/engine_sim_tui/widgets/: CircularGaugeWidget.h  DashboardLayout.h
engine-sim-tui/src/: engine_sim_tui_main.cpp
engine-sim-tui/src/canvas/: ColorPalette.cpp
engine-sim-tui/src/data/: MockEngineDataProvider.cpp
engine-sim-tui/src/viewmodels/: EngineViewModel.cpp  GaugeViewModel.cpp
engine-sim-tui/src/widgets/: CircularGaugeWidget.cpp  DashboardLayout.cpp
engine-sim-tui/tests/integration/: TestDashboardIntegration.cpp
engine-sim-tui/tests/viewmodels/: TestEngineViewModel.cpp  TestGaugeViewModel.cpp
engine-sim-tui/tests/widgets/: TestCircularGaugeWidget.cpp
test/: CMakeLists.txt
test/archive/: CircularBufferTelemetryTest.cpp  IAudioBufferTest.cpp  ThreadedStrategyIntegrationTest.cpp
test/config/: test_cases.json
test/debug/: test_debug_default_engine.cpp
test/integration/: CMakeLists.txt  SimulatorLevelAudioTest.cpp
test/mocks/: MockAudioStrategy.h  MockAudioUnit.cpp  MockAudioUnit.h  MockDataSimulator.cpp  MockDataSimulator.h  MockEngineSimAPI.h  MockInputProvider.h  MockKeyActionTarget.h  MockKeyboardInput.h  MockSimulator.h  MockSimulatorSession.h
test/scripts/: stack.sh  test_default_engine_direct.sh
test/smoke/: SmokeTestHelper.h  test_audio_modes.cpp  test_bridge_smoke.cpp  test_default_engine.cpp  test_path_resolution.cpp  test_runloop_lifecycle.cpp  test_silent_flag.cpp  test_sine_mode.cpp
test/telemetry/: CMakeLists.txt  test_telemetry.cpp  test_telemetry_isp.cpp
test/unit/: ANSIColorsTest.cpp  AudioRegressionTest.cpp  AudioTestConstants.cpp  AudioTestConstants.h  AudioTestHelpers.h  BufferContextEradicationTest.cpp  CLIMainTest.cpp  CLITimeParsingTest.cpp  CMakeLists.txt  CircularBufferTelemetryTest.cpp  CircularBufferTest.cpp  CommandLineParserTest.cpp  ConsolePresentationTest.cpp  DebugTest.cpp  DemoKeyboardInputProviderTest.cpp  GearboxLogFilenameTest.cpp  IAudioBufferTest.cpp  IAudioStrategyTest.cpp  ISimulatorTest.cpp  IntegrationAudioPlayerTest.cpp  InteractiveModeStateTest.cpp  KeyboardInputProviderTest.cpp  MockSimulatorDebugTest.cpp  ReplayTimeValidatorTest.cpp  SignalStopControllerTest.cpp  StrategyPipelineTest.cpp  SyncPullRendererTest.cpp  ThreadedRendererTest.cpp  ThreadedStrategyIntegrationTest.cpp  test_frequency_check.cpp
test/unit/baselines/: README.md
(+340 files in other folders)
